<resources>
    <string name="app_name">Space Mining</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explorar_text">Explorar</string>
    <string name="stuff_in_space_text">Stuff In Space</string>
    <string name="rastreo_espacial_text">Rastreo Espacial</string>
    <string name="lexicon_txt">Lexicón Cósmico</string>
    <string name="fuente_txt">Fuente:</string>
    <string name="suffin_sapace_text"><u>stuffin.space</u></string>
    <string name="titulo_texto">Titulo</string>
    <string name="tipo_grafico_text">Tipo de grafico</string>
    <string name="visualizacion_text">Visualización</string>
    <string name="precedir_caidas_text"><u>¿Deseas predecir períodos?</u></string>
    <string name="graficar_text">¡A graficar!</string>
    <string name="apogee_text">Apogee</string>
    <string name="perigee_text">Perigee</string>
    <string name="object_id">Object_id</string>
    <string name="id_text">id</string>
    <string name="valor_text">valor</string>
    <string name="prediccion_text_value"># de días</string>
    <string name="entry_text_bibioteca">¿Qué deseas buscar?</string>
    <string name="titulo_bar">SPACE MINING</string>
    <string name="titulo_spiner">Elige una opción</string>
    <string name="period_text">Period</string>
    <string name="inclination_text">Inclination</string>
    <string name="haz_prediccion_text">Haz tu predicción</string>
    <string name="n_km">n° km</string>
    <string name="degree_txt">degree</string>
    <string name="predecir_text">¡Predecir!</string>
    <string name="period_prediction_text">Period Prediction</string>
    <string name="valor_prediccion_text">valor</string>
    <string name="advertencia_text">¡Por favor llena todos los campos!</string>
    <string name="advertencia_apogee">¡Apogee debe ser mayor que Perigee!</string>
    <string name="nada"> - </string>
    <string name="km"> Km</string>
    <string name="text_dispersion">Grafico Dispersión (órbita) de Apogee - Period</string>
    <string-array name="tipos_graficos">
        <item><b>Dispersión (órbita)</b></item>
        <item><b>Dispersión (no órbita)</b></item>
        <item><b>Distribución (órbita)</b></item>
        <item><b>Distribución (no órbita)</b></item>
        <item><b>Circular (órbita)</b></item>
        <item><b>Circular (no órbita)</b></item>
        <item><b>Histograma (no órbita)</b></item>
        <item><b>Histograma (órbita)</b></item>
    </string-array>
    <string-array name="dispersion_noorbita">
        <item><b>Apogee - Period</b></item>
        <item><b>Apogee - Perigee</b></item>
        <item><b>Apogee - Inclination</b></item>
        <item><b>Period - Perigee</b></item>
        <item><b>Period - Inclination</b></item>
        <item><b>Perigee - Inclination</b></item>
        <item><b>Days_in_Orbit - Apogee</b></item>
        <item><b>Days_in_Orbit - Period</b></item>
        <item><b>Days_in_Orbit - Perigee</b></item>
        <item><b>Days_in_Orbit - Inclination</b></item>
    </string-array>
    <string-array name="dispersion_orbita">
        <item><b>Apogee - Period</b></item>
        <item><b>Apogee - Perigee</b></item>
        <item><b>Apogee - Inclination</b></item>
        <item><b>Period - Perigee</b></item>
        <item><b>Period - Inclination</b></item>
        <item><b>Perigee - Inclination</b></item>
    </string-array>
    <string-array name="distribucion_noorbita">
        <item><b>RCS_SIZE - Apogee</b></item>
        <item><b>RCS_SIZE - Period</b></item>
        <item><b>RCS_SIZE - Perigee</b></item>
        <item><b>RCS_SIZE - Inclination</b></item>
        <item><b>RCS_SIZE - Days_in_Orbit</b></item>
    </string-array>
    <string-array name="distribucion_orbita">
        <item><b>RCS_SIZE - Apogee</b></item>
        <item><b>RCS_SIZE - Period</b></item>
        <item><b>RCS_SIZE - Perigee</b></item>
        <item><b>RCS_SIZE - Inclination</b></item>
    </string-array><string-array name="histograma_noorbita">
        <item><b>Apogee</b></item>
        <item><b>Period</b></item>
        <item><b>Perigee</b></item>
        <item><b>Inclination</b></item>
        <item><b>Days_in_Orbit</b></item>
</string-array><string-array name="histograma_orbita">
    <item><b>Apogee</b></item>
    <item><b>Period</b></item>
    <item><b>Perigee</b></item>
    <item><b>Inclination</b></item>
    </string-array>
    <string-array name="circular">
        <item><b>RCS_SIZE</b></item>
    </string-array>
</resources>