<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineaGuia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.34" />

        <View
            android:id="@+id/lineaSuperior"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/table_prediccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_startEnd_table_mineria"
            android:layout_marginTop="@dimen/margin_top_table_mineria"
            android:layout_marginEnd="@dimen/margin_startEnd_table_mineria"
            android:background="@drawable/borde_tablacontenido_rowsrandom"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/lineaGuia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineaSuperior">

            <TableRow
                android:id="@+id/row_encabezado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_tablencabezado_mineria">

                <TextView
                    android:id="@+id/column_object_id"
                    style="@style/EstiloTextViewEncabezadoTabla"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/object_id" />

                <TextView
                    android:id="@+id/column_apogee"
                    style="@style/EstiloTextViewEncabezadoTabla"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/apogee_text" />

                <TextView
                    android:id="@+id/column_perigee"
                    style="@style/EstiloTextViewEncabezadoTabla"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/perigee_text" />

                <TextView
                    android:id="@+id/column_period"
                    style="@style/EstiloTextViewEncabezadoTabla"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/period_text" />

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRows"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:itemCount="6" />

        </TableLayout>

        <TextView
            android:id="@+id/predecir_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:gravity="center_vertical"
            android:text="@string/haz_prediccion_text"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_haz_tu_prediccion"
            app:layout_constraintBottom_toTopOf="@+id/editTextApogee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineaGuia" />

        <EditText
            android:id="@+id/editTextApogee"
            style="@style/EntryTextMineria"
            android:layout_width="@dimen/width_entryText_mineria"
            android:layout_height="@dimen/height_entryText_biblioteca"
            android:hint="@string/n_km"
            app:layout_constraintBottom_toTopOf="@+id/editTextPerigee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textApogee"
            app:layout_constraintTop_toBottomOf="@+id/predecir_text" />

        <TextView
            android:id="@+id/textPerigee"
            style="@style/TextViewSubsMineria"
            android:text="@string/perigee_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPerigee"
            app:layout_constraintEnd_toStartOf="@+id/editTextPerigee"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textApogee"
            style="@style/TextViewSubsMineria"
            android:text="@string/apogee_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextApogee"
            app:layout_constraintEnd_toStartOf="@+id/editTextApogee"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPerigee"
            style="@style/EntryTextMineria"
            android:layout_width="@dimen/width_entryText_mineria"
            android:layout_height="@dimen/height_entryText_biblioteca"
            android:hint="@string/n_km"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textPerigee"
            app:layout_constraintTop_toBottomOf="@+id/editTextApogee" />

        <Button
            android:id="@+id/button_predecir"
            style="@style/Widget.AppTheme.Botton1"
            android:layout_width="@dimen/width_button_mineria"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_button"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/predecir_text"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_button_mineria"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toStartOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout8"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button_predecir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPerigee">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borde_tablencabezado_mineria"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/EstiloTextViewEncabezadoTabla"
                    android:text="@string/period_prediction_text"
                    android:textAlignment="center" />
            </TableRow>


            <TableRow

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borde_tablecontenido_mineria">

                <TextView
                    android:id="@+id/valor_prediccion"
                    style="@style/EstiloTextViewContenidoTabla"
                    android:layout_width="@dimen/width_textview_valorprediccion"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/borde_tablecontenido_mineria"
                    android:text="@string/valor_prediccion_text" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imagerror"
            android:layout_width="@dimen/width_imageview_imagerror"
            android:layout_height="@dimen/height_imageview_imagerror"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/lineaGuia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/nowifi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>